--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
     "bootstrap-material-design": "^4.1.1",
     "inferno": "^7.1.13",
     "inferno-scripts": "7.0.4"
