--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "axios": "^0.19.0",
     "bootstrap-material-design": "^4.1.1",
     "inferno": "^7.1.13",
-    "inferno-scripts": "7.0.4"
+    "inferno-redux": "^7.1.13",
+    "inferno-scripts": "7.0.4",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0"
   },
   "scripts": {
     "start": "inferno-scripts start",
